# pipeline-svs-deidentification

./: .gitignore  .gitmodules  README.md  pyproject.toml
src/svs_deid_pipeline/: cli.py  config.py  deidentification.py  pipeline.py  s3.py  submission.py  utils.py
tests/: conftest.py  test_manifest.py  test_pipeline_unit.py  test_s3.py
